@@ -15,7 +15,6 @@ DESIGN ISSUES
 - expectation for current indicators in Multiple Capacitors? none? battery wires? every wire?
 
 HIGH PRIORITY
-- bug: plate area drag handle gets out of sync with mouse cursor location because we haven't accounted for z axis
 - change: make circuit be in a vacuum instead of air
 - publish 1.00
 
